--- a/ImportExport/package.json
+++ b/ImportExport/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "webpack": "^5.74.0"
+    "core-js": "^3.6.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
@@ -24,6 +26,9 @@
     "mini-css-extract-plugin": "^2.6.1",
     "raw-loader": "^4.0.2",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "live-server": "^1.2.1",
+    "webpack": "^5.74.0"
   }
 }
+
